<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="normalCategory"
        app:title="@string/preference_category_normal">

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_color_palette_32dp"
            app:key="normal_dynamic_colors"
            app:summary="@string/preference_summary_dynamic_color"
            app:title="@string/preference_title_dynamic_color" />

        <DropDownPreference
            app:defaultValue="system"
            app:entries="@array/preference_list_dark_mode"
            app:entryValues="@array/preference_list_dark_mode_value"
            app:icon="@drawable/ic_dark_mode_32dp"
            app:key="normal_darkMode"
            app:summary="%s"
            app:title="@string/preference_title_dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="othersCategory"
        app:title="@string/preference_category_others">

        <Preference
            app:icon="@drawable/ic_launcher_icon_32dp_color_primary"
            app:key="other_about"
            app:title="@string/preference_title_about" />

        <Preference
            app:icon="@drawable/ic_code_32dp_color_primary"
            app:key="other_github"
            app:summary="https://github.com/Lowae/Design-WanAndroid"
            app:title="@string/preference_title_home_website" />

        <Preference
            app:key="other_logout"
            app:layout="@layout/preference_logout_layout"
            app:selectable="false"
            app:title="@string/logout" />

    </PreferenceCategory>

</PreferenceScreen>
