<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lowe.wanandroid.ui.home.child.explore.ExploreFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.lowe.wanandroid.ui.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_navigator"
        android:name="com.lowe.wanandroid.ui.navigator.NavigatorFragment"
        android:label="@string/title_navigator"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_we_chat_group"
        android:name="com.lowe.wanandroid.ui.group.GroupFragment"
        android:label="@string/title_we_chat_group"
        tools:layout="@layout/fragment_group" />
</navigation>